# dotfiles

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  Makefile  README.md  config.py  deploy.py  deploy_home.py  deploy_nvda.py  deploy_nyu.py  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: check.yml  lint.yml  prek.yml
.mise/: config.toml
.mise/tasks/: aim  deploy  docker  keygen  lint  setup
dockerfiles/: Dockerfile
files/bash/: .bash_aliases  .bash_profile
files/enroot/: .credentials  mkenroot.sh
files/fabric/: .fabric.yaml
files/ghostty/: config
files/git/: .gitconfig  .gitignore_global
files/micromamba/: .mm_profile
files/nemo/: .nemo_profile  .nemo_skills_profile
files/pueue/: .pueue_aliases  prun
files/slurm/: .nemo_profile  .slurm_profile  srun-docker  srun-docker-nvda
files/tmux/: .tmux.conf
files/vscode/: keybindings.json  settings.json
inventories/: home.py  nvda.py  nyu.py
myinfra/facts/: brew.py  cloudflare.py  docker.py  enroot.py  rclone.py  server.py  slurm.py  sudo.py
myinfra/operations/: archive.py  cloudflare.py  files.py  ssh.py  uv.py  vscode.py
myinfra/utils/: binary.py
pkgs/xfiles/: pyproject.toml
pyinfra/: config.py  deploy.py
pyinfra/inventories/: home.py  nvda.py  vm.py
pyinfra/tasks/: .gitignore
tasks/: bash.py  bitwarden.py  bottom.py  brave.py  cleanmymac.py  cloudflare.py  deskpad.py  discord.py  docker.py  enroot.py  fabric.py  filen.py  fontconfig.py  ghostty.py  git.py  iterm.py  jq.py  localsend.py  mega.py  micro.py  micromamba.py  mole.py  nemo.py  netnewswire.py  node.py  obsidian.py  pandoc.py  pdfexpert.py  pueue.py  python.py  raycast.py  rclone.py  slack.py  slurm.py  spotify.py  ssh.py  starship.py  stirling-pdf.py  tailscale.py  tmux.py  (+4 more)
(+162 files in other folders)
