[project]
name = "dotfiles"
version = "0.0.0a"

requires-python = ">=3.11,<3.13"
dependencies = [
    "myinfra",
    "xfiles",
]

[tool.ruff]
target-version = "py311"
line-length = 119

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv.sources]
myinfra = { path = "packages/myinfra", editable = true }
xfiles = { path = "packages/xfiles", editable = true }
