[project]
name = "dotfiles"
version = "0.0.0a"
requires-python = ">=3.11,<3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["myinfra", "xfiles"]

[tool.uv]
sources.myinfra = { path = "packages/myinfra", editable = true }
sources.xfiles = { path = "packages/xfiles", editable = true }

[tool.ruff]
target-version = "py311"
line-length = 119
lint.extend-select = ["I"]
